--- a/index.html
+++ b/index.html
@@ -3,33 +3,40 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Letters of Recommendation</title>
+  <title>Alex Pekala - Letters of Recommendation</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       padding: 2em;
-      background-color: #f4f4f4;
-    }
-    h1 {
+      background-color: #f9f9f9;
       color: #333;
     }
-    ul {
-      list-style-type: none;
-      padding: 0;
+    h1 {
+      font-size: 2em;
+      color: #222;
+      margin-bottom: 0.5em;
     }
-    li {
-      margin: 1em 0;
+    p {
+      font-size: 1em;
+      margin-bottom: 2em;
     }
     a {
+      display: inline-block;
+      font-size: 1.1em;
+      color: #007BFF;
       text-decoration: none;
-      color: #007bff;
+      margin-bottom: 1em;
+    }
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <h1>Letters of Recommendation</h1>
-  <ul>
-    <li><a href="Alex Pekala Letter of Rec.pdf" target="_blank">Recommendation from Angela Alli</a></li>
-  </ul>
+  <h1>Letter of Recommendation</h1>
+  <p>Click the link below to view or download my letter of recommendation:</p>
+  <a href="Alex Pekala Letter of Rec.pdf" target="_blank">
+    📄 Alex Pekala - Letter of Recommendation
+  </a>
 </body>
 </html>
